--- a/build.gradle
+++ b/build.gradle
@@ -5,22 +5,17 @@ plugins {
 }
 
 group = 'io.github.deficuet'
-version = '0.0.1'
+version = '0.1.0'
 
 repositories {
-    maven { url "https://www.brockmann-consult.de/mvn/os/" }
     mavenCentral()
     maven { url 'https://jitpack.io' }
-    maven {
-        url "http://maven.geo-solutions.it/"
-        allowInsecureProtocol = true
-    }
 }
 
 dependencies {
-    implementation 'com.github.Deficuet:UnityKt:v0.0.1-beta.3.1'
-    implementation 'org.json:json:20230227'
-    implementation 'com.github.Deficuet:JImageUtils:v0.0.2'
+    implementation 'com.github.Deficuet:UnityKt:0.1.0_alpha.9'
+    implementation 'org.json:json:20231013'
+    implementation 'com.github.Deficuet:JImageUtils:0.0.4.1'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
